<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/addProductPopUpConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="#69B7E6">

    <TextView
        android:id="@+id/productTextViewAddProductPopup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/produkt"
        android:textColor="#FFEB3B"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024" />

    <EditText
        android:id="@+id/shoppingListEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/nazwa_produktu"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productTextViewAddProductPopup"
        android:importantForAutofill="no" />

    <CheckBox
        android:id="@+id/enablePriceCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ustaw_cen_opcjonalnie"
        android:textColor="#FFEB3B"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/priceTextViewAddProductPopup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shoppingListEditText" />

    <TextView
        android:id="@+id/priceTextViewAddProductPopup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.3"
        android:enabled="false"
        android:text="@string/cena"
        android:textColor="#FFEB3B"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/priceEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:alpha="0.5"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/cena"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceTextViewAddProductPopup"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/addShoppingListPopUpButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_with_round_corners_green"
        android:minWidth="150dp"
        android:text="@string/dodaj_produkt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/priceTextViewAddProductPopup"
        app:layout_constraintTop_toBottomOf="@+id/priceEditText" />

    <Button
        android:id="@+id/cancelShoppingListPopUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_with_round_corners_red"
        android:minWidth="150dp"
        android:text="@android:string/cancel"
        app:layout_constraintEnd_toStartOf="@+id/priceTextViewAddProductPopup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceEditText" />
</androidx.constraintlayout.widget.ConstraintLayout>